--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,10 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"fzaninotto/faker": "1.5.*@dev"
 	},
+
 	"autoload": {
 		"classmap": [
 			"app/commands",
